# unitree-go1-ppo-mjx

./: .gitattributes  .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  __init__.py  locomotion.py  modeling_section.md  pyproject.toml  registry.py  wrapper.py
configs/: locomotion_params.py
envs/: base.py  go1_constants.py  joystick.py
go1_ppo/: __init__.py  mjx_env.py
go1_ppo/envs/: base.py  randomize.py
go1_ppo/scene/: go1_mjx.xml  go1_mjx_feetonly.xml  go1_mjx_fullcollisions.xml  scene_mjx_feetonly_rough_terrain.xml
logs/Go1JoystickFlatTerrain-20260327-201638/: events.out.tfevents.1774656998.pop-os
logs/Go1JoystickFlatTerrain-20260327-210940/: events.out.tfevents.1774660180.pop-os
logs/Go1JoystickFlatTerrain-20260327-213414/: events.out.tfevents.1774661654.pop-os
logs/Go1JoystickFlatTerrain-20260327-220655/: events.out.tfevents.1774663615.pop-os
logs/Go1JoystickFlatTerrain-20260327-220955/: events.out.tfevents.1774663795.pop-os
logs/Go1JoystickFlatTerrain-20260327-224126/: events.out.tfevents.1774665686.pop-os
logs/Go1JoystickFlatTerrain-20260327-224248/: events.out.tfevents.1774665768.pop-os
logs/Go1JoystickFlatTerrain-20260327-234832/: events.out.tfevents.1774669712.pop-os
logs/Go1JoystickFlatTerrain-20260327-235518/: events.out.tfevents.1774670118.pop-os
logs/Go1JoystickFlatTerrain-20260328-200227/: events.out.tfevents.1774742547.pop-os
logs/Go1JoystickFlatTerrain-20260328-203135/: events.out.tfevents.1774744295.pop-os
logs/Go1JoystickFlatTerrain-20260328-203143/: events.out.tfevents.1774744303.pop-os
logs/Go1JoystickFlatTerrain-20260328-203303/: events.out.tfevents.1774744383.pop-os
logs/Go1JoystickFlatTerrain-20260328-205442/: events.out.tfevents.1774745682.pop-os
logs/Go1JoystickFlatTerrain-20260328-213037/: events.out.tfevents.1774747837.pop-os
logs/Go1JoystickInclinedTerrain-20260425-144007/: events.out.tfevents.1777142407.pop-os
logs/Go1JoystickInclinedTerrain-20260425-145608/: env_config.json  events.out.tfevents.1777143368.pop-os
logs/Go1JoystickRoughTerrain-20260425-153219/: events.out.tfevents.1777145539.pop-os
runs/Go1JoystickFlatTerrain-20260327-201151/: env_config.json  ppo_config.json  progress.csv
runs/Go1JoystickFlatTerrain-20260327-234358/: env_config.json  ppo_config.json  progress.csv
scene/: go1_mjx.xml  go1_mjx_feetonly.xml  go1_mjx_fullcollisions.xml
scripts/: go1_trajectory.py  teleop_go1_keyboard.py  teleop_go1_keyboard_with_plots.py  train_go1_ppo.py
training/: train_jax_ppo.py
(+1043 files in other folders)
